@@ -1,3 +1,5 @@
+* Change days into timedelta overdue
+
 Version 4.0.0 - 2016-05-02
 * Bug fixes (see mercurial logs for details)
 * Add Python3 support
